# video_guided_tamp_planner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static_code_analysis_and_tests.yml
preprocessing/: 01_create_calib_matrix.py  02_create_data_file.py  03_sample_one_pose.py  04_check_existing_poses.py  doc.md  minimal_example_box_sampling_bug.py  preproc_utils.py
scripts/: 01_benchmark.py  02_solve_task.py
tamp_guided_by_video/planners/: __init__.py  hpp_planner.py  multi_contact_planner.py  pddl_planner.py
tamp_guided_by_video/utils/: corba.py  demo_processing.py  domain.pddl  multi_contact_tree.py  pddl_utils.py  planner_utils.py  robot.py  utils.py
visualisations/: paper_visualization.py  study_planning_time.py  summarizez_results_file.py  utils.py  visualize_path.py
